force-app/main/default/objects/Account/fields/coffee__c.field-meta.xml
<CustomField>
    <fullName>coffee__c</fullName>
    <label>coffee</label>
    <length>12</length>
    <type>Text</type>
</CustomField>