force-app/main/default/objects/Account/fields/Nubiforce__c.field-meta.xml
<CustomField>
    <fullName>Nubiforce__c</fullName>
    <label>Nubiforce</label>
    <length>12</length>
    <type>Text</type>
</CustomField>